--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,7 +1,12 @@
+$color-accent: #00ffe1
+
 $heading-font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif
 $body-font-family: $heading-font-family
 
-$header-background: none
+$header-background: $color-accent
+$header-sticky-background: $color-accent
+$header-logo-height-desktop: 70px
 $header-border-bottom-width: 0
-$hero-background-color: none
+$hero-background-color: $color-accent
+$hero-color: black
 $footer-background-color: none
