--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -10,3 +10,5 @@ $header-border-bottom-width: 0
 $hero-background-color: $color-accent
 $hero-color: black
 $footer-background-color: none
+
+$block-gallery-carousel-background: none
