pattern and font

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,11 +1,11 @@
 $color-accent: #00ffe1
 
-$heading-font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif
+$heading-font-family: "Non Bureau", sans-serif
 $body-font-family: $heading-font-family
 
-$header-background: $color-accent
+$header-background: none
 $header-sticky-background: $color-accent
-$header-logo-height-desktop: 70px
+$header-logo-height-desktop: 60px
 $header-border-bottom-width: 0
 $hero-background-color: $color-accent
 $hero-color: black
