--- a/assets/sass/_fonts.sass
+++ b/assets/sass/_fonts.sass
@@ -1,1 +1,2 @@
-// @include font-face("Font name", font-file-in-fonts-without-extensions)
+@include font-face("Non Bureau", NonBureau-Light)
+@include font-face("Non Bureau", NonBureau-Bold, $weight: bold)
