--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -1,6 +1,6 @@
 *
     letter-spacing: 0.02em !important
 .hero
-    background-image: url(/assets/images/pattern.png)
+    background-image: url(/assets/images/pattern-colored.png)
     background-size: 25%
     background-position-x: var(--grid-gutter)
