--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -1,8 +1,13 @@
 *
-    letter-spacing: 0.02em !important
+    letter-spacing: 0.03em !important
+    font-kerning: normal
 .hero
     background-image: url(/assets/images/pattern-colored.png)
     background-position-x: var(--grid-gutter)
     background-size: 50%
     @include media-breakpoint-up(desktop)
        background-size: 25%
+.organization
+    .media
+        img
+            mix-blend-mode: multiply
