--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -12,3 +12,4 @@ $hero-color: black
 $footer-background-color: none
 
 $block-gallery-carousel-background: none
+$block-call-to-action-accent-color: black
