--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -13,3 +13,4 @@ $footer-background-color: none
 
 $block-gallery-carousel-background: none
 $block-call-to-action-accent-color: black
+$block-chapter-layout-accent-color: black
